feat: version lock